docs: actualizar AGENTS.md y scripts-automation.md para Java 25
- AGENTS.md: sección Java 25 LTS con estrategia GlowRoot opción B,
  arquitectura CI separada (maven-central + gh-pkg), artifact sharing,
  tabla de make targets y tabla de mejoras de código Java 25 por módulo.
- scripts-automation.md: diagrama de flujo actualizado con artifact
  sharing, secciones para deploy-one-level y deploy-github-packages-one-level,
  tabla de niveles de despliegue L0-L6, make targets, próximos pasos
  actualizados (items completados marcados ✅).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>